--- a/birth-chart.html
+++ b/birth-chart.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     
@@ -249,7 +249,7 @@
         <div class="zodiac-symbols" id="zodiacSymbols"></div>
         <div class="container text-center">
             <div class="hero-logo mb-4">
-                <img src="images/logo.jpg" alt="Martial Minds Logo" class="img-fluid rounded-circle shadow-lg" style="max-width: 400px;">
+                <img src="files/novi_logo-removebg-preview.png" alt="Martial Minds Logo" class="img-fluid rounded-circle shadow-lg" style="max-width: 400px;">
             </div>
             <h1 class="display-4 fw-bold text-white mb-4">Psychological Birthchart Reading</h1>
             <p class="lead text-white mb-0">Your personal horoscope - rethought through the lens of modern psychology</p>
@@ -449,8 +449,8 @@
                         </div>
                         <ul class="list-unstyled">
                             <li class="mb-3"><i class="fas fa-check text-success me-3"></i>Comprehensive birth chart analysis</li>
-                            <li class="mb-3"><i class="fas fa-check text-success me-3"></i>90-minute in-depth session</li>
-                            <li class="mb-3"><i class="fas fa-check text-success me-3"></i>Written summary and insights</li>
+                            <li class="mb-3"><i class="fas fa-check text-success me-3"></i>60-minute in-depth session</li>
+                            <li class="mb-3"><i class="fas fa-check text-success me-3"></i>No written summary provided</li>
                             <li class="mb-3"><i class="fas fa-check text-success me-3"></i>Follow-up email support</li>
                             <li class="mb-0"><i class="fas fa-check text-success me-3"></i>Integration with therapy goals</li>
                         </ul>
