--- a/business-consulting.html
+++ b/business-consulting.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     
@@ -273,7 +273,7 @@
         <div class="floating-elements" id="floatingElements"></div>
         <div class="container text-center">
             <div class="hero-logo mb-4">
-                <img src="images/logo.jpg" alt="Martial Minds Logo" class="img-fluid rounded-circle shadow-lg" style="max-width: 400px;">
+                <img src="files/novi_logo-removebg-preview.png" alt="Martial Minds Logo" class="img-fluid rounded-circle shadow-lg" style="max-width: 400px;">
             </div>
             <h1 class="display-4 fw-bold text-white mb-4">EMDR Trauma Therapy & Business Coaching</h1>
             <p class="lead text-white mb-0">Processing what blocks. Creating space for healing and growth.</p>
