--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                         <div class="hero-logo mb-4">
                             
                         </div>
-                        <h2 class="h3 mb-4" data-lang="hero-subtitle">Praxis für Psychotherapie</h2>
-                        <p class="small text-white-50 mb-4" data-lang="heilpraktiker-text">Nach dem Heilpraktikergesetz</p>
+                        <h2 class="h3 mb-4" data-lang="hero-subtitle">Practice for Psychotherapy</h2>
+                        <p class="small text-white-50 mb-4" data-lang="heilpraktiker-text">According to the Heilpraktikergesetz</p>
                         <div class="schwerpunkte-section mb-4">
-                            <h4 class="h5 text-white mb-3" data-lang="schwerpunkte-title">Meine Schwerpunkte</h4>
-                            <p class="text-white-75 mb-0" data-lang="schwerpunkte-text">Persönlichkeitsentwicklung, Trauma Heilung, Bewältigung von Angststörungen, Selbstwert & innere Stabilität, Paarbeziehungen & Kommunikation, Spirituelle Selbsterkenntnis, Präventionstraining, Betriebliche Gesundheitsförderung/Executive Coaching/Business Coaching</p>
+                            <h4 class="h5 text-white mb-3" data-lang="schwerpunkte-title">My Focus Areas</h4>
+                            <p class="text-white-75 mb-0" data-lang="schwerpunkte-text">Personal development, trauma healing, coping with anxiety disorders, self-esteem & inner stability, couple relationships & communication, spiritual self-awareness, prevention training, workplace health promotion/executive coaching/business coaching</p>
                         </div>
                         <p class="lead mb-4" data-lang="hero-description">
                             Martial Minds is more than just a practice name - it is a concept. The word "martial" originally comes from the field of martial arts - and symbolizes strength, courage, discipline and determination to actively face life's challenges. "Minds" refers to the depth, complexity and versatility of our minds. Together, Martial Minds embodies the powerful combination of inner strength and psychological growth - exactly where change begins.
@@ -114,7 +114,7 @@
                 <div class="col-lg-6">
                     <div class="about-content">
                         <h3 class="h4 mb-4 text-primary">Azra Mujcinovic M.Sc.</h3>
-                        <h4 class="h5 mb-3">Heilpraktikerin für Psychotherapie</h4>
+                        <h4 class="h5 mb-3" data-lang="about-title-2">Non-medical practitioner for psychotherapy</h4>
                         <p class="mb-4" data-lang="about-description">
                             My path into psychotherapeutic work began with a deep interest in human experience, social dynamics and emotional healing. This interest led me to a Master of Science in Social Psychology, where I learned how our thoughts, feelings and actions arise and can change in interaction with our social environment.
                         </p>
@@ -279,7 +279,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="h4 mb-4 text-primary" data-lang="target-groups-title">Zielgruppen und Kosten</h3>
+                    <h3 class="h4 mb-4 text-primary" data-lang="target-groups-title">Target Groups and Costs</h3>
                     <p class="mb-4" data-lang="target-groups-desc">
                         I treat adults and young people aged 16 and over who want to consciously work on their personal development and mental health. I also support companies - especially managers and teams - as part of coaching, prevention and personal development to promote mental strength, self-reflection and sustainable leadership skills. Treatment is exclusively for self-payers or people whose private insurance covers the costs.
                     </p>
