--- a/index.html
+++ b/index.html
@@ -467,96 +467,64 @@
                     <p class="lead text-muted" data-lang="contact-subtitle">Bereit für Ihren Weg? Nehmen Sie noch heute Kontakt auf.</p>
                 </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-6">
-                    <div class="contact-info">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="contact-info text-center">
                         <h4 class="mb-4 text-primary" data-lang="contact-info-title">Kontakt aufnehmen</h4>
-                        <div class="contact-item mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="contact-icon me-3">
-                                    <i class="fas fa-phone fa-2x text-primary"></i>
+                        <div class="row g-4">
+                            <div class="col-md-6">
+                                <div class="contact-item">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="contact-icon me-3">
+                                            <i class="fas fa-phone fa-2x text-primary"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="mb-1" data-lang="contact-phone-label">Telefon</h6>
+                                            <p class="mb-0">+49 175 1427016</p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div>
-                                    <h6 class="mb-1" data-lang="contact-phone-label">Telefon</h6>
-                                    <p class="mb-0">+49 175 1427016</p>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="contact-item">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="contact-icon me-3">
+                                            <i class="fas fa-envelope fa-2x text-primary"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="mb-1" data-lang="contact-email-label">E-Mail</h6>
+                                            <p class="mb-0">azra.mujcinovic@example.com</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="contact-item">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="contact-icon me-3">
+                                            <i class="fas fa-map-marker-alt fa-2x text-primary"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="mb-1" data-lang="contact-location-label">Standort</h6>
+                                            <p class="mb-0" data-lang="contact-location-desc">Online-Sitzungen weltweit verfügbar. Präsenz-Sitzungen in Deutschland.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="contact-item">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <div class="contact-icon me-3">
+                                            <i class="fas fa-clock fa-2x text-primary"></i>
+                                        </div>
+                                        <div>
+                                            <h6 class="mb-1" data-lang="contact-availability-label">Verfügbarkeit</h6>
+                                            <p class="mb-0" data-lang="contact-availability-desc">Flexible Terminvergabe. Erstgespräche meist persönlich, Therapiesitzungen online oder persönlich.</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="contact-item mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="contact-icon me-3">
-                                    <i class="fas fa-envelope fa-2x text-primary"></i>
-                                </div>
-                                <div>
-                                    <h6 class="mb-1" data-lang="contact-email-label">E-Mail</h6>
-                                    <p class="mb-0">azra.mujcinovic@example.com</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="contact-item mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="contact-icon me-3">
-                                    <i class="fas fa-map-marker-alt fa-2x text-primary"></i>
-                                </div>
-                                <div>
-                                    <h6 class="mb-1" data-lang="contact-location-label">Standort</h6>
-                                    <p class="mb-0" data-lang="contact-location-desc">Online-Sitzungen weltweit verfügbar. Präsenz-Sitzungen in Deutschland.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="contact-item">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="contact-icon me-3">
-                                    <i class="fas fa-clock fa-2x text-primary"></i>
-                                </div>
-                                <div>
-                                    <h6 class="mb-1" data-lang="contact-availability-label">Verfügbarkeit</h6>
-                                    <p class="mb-0" data-lang="contact-availability-desc">Flexible Terminvergabe. Erstgespräche meist persönlich, Therapiesitzungen online oder persönlich.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="contact-form">
-                        <h4 class="mb-4 text-primary" data-lang="contact-form-title">Nachricht senden</h4>
-                        <form id="contactForm">
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <input type="text" class="form-control" id="firstName" placeholder="Vorname" data-lang="form-firstname" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="text" class="form-control" id="lastName" placeholder="Nachname" data-lang="form-lastname" required>
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="form-control" id="email" placeholder="E-Mail-Adresse" data-lang="form-email" required>
-                                </div>
-                                <div class="col-12">
-                                    <input type="tel" class="form-control" id="phone" placeholder="Telefonnummer" data-lang="form-phone">
-                                </div>
-                                <div class="col-12">
-                                    <select class="form-select" id="service" required>
-                                        <option value="" data-lang="select-service">Service auswählen</option>
-                                        <option value="psychotherapy" data-lang="option-psychotherapy">Psychotherapie</option>
-                                        <option value="emdr" data-lang="option-emdr">EMDR Traumatherapie</option>
-                                        <option value="birkman" data-lang="option-birkman">Birkman Persönlichkeitstest</option>
-                                        <option value="behavioral" data-lang="option-behavioral">Verhaltenstherapie</option>
-                                        <option value="couples" data-lang="option-couples">Paartherapie</option>
-                                        <option value="birthchart" data-lang="option-birthchart">Psychologisches Birthchart Reading</option>
-                                        <option value="business" data-lang="option-business">Business Coaching</option>
-                                        <option value="other" data-lang="option-other">Sonstiges</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Ihre Nachricht" data-lang="form-message" required></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button type="submit" class="btn btn-primary btn-lg w-100">
-                                        <i class="fas fa-paper-plane me-2"></i><span data-lang="send-message">Nachricht senden</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
